adiciona botao para resetar marcações

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
       <input type="submit" onclick="colorirDia()">
   </section>
 </section>
+    <section class="botao.reset">
+      <button id="resetButton" onclick="resetCalendar()">Reiniciar marcações</button>
+    </section>
     <!-- SCRIPT -->
     <script src="script.js"></script>
   </body>
